Macrochitze list of teasers
not yet done: jump to final question

--- a/Macrochitze.html
+++ b/Macrochitze.html
@@ -19,8 +19,9 @@
 	<script type="text/javascript" src="Javascript/C2.Macrochitze/J1.Global_variables.js"></script>
 	<script type="text/javascript" src="Javascript/C2.Macrochitze/J2.Database0Main.js"  ></script>
     <script type="text/javascript" src="Javascript/C2.Macrochitze/J2.Database0Doors.js" ></script>
-	<script type="text/javascript" src="Javascript/C2.Macrochitze/J3.Functions.js"       ></script>
-    <script type="text/javascript" src="Javascript/C2.Macrochitze/J4.SaveAndLoad.js"       ></script>
+	<script type="text/javascript" src="Javascript/C2.Macrochitze/J3.Functions.js"      ></script>
+    <script type="text/javascript" src="Javascript/C2.Macrochitze/J4.SaveAndLoad.js"    ></script>
+    <script type="text/javascript" src="Javascript/C2.Macrochitze/J5.ListTeasers.js"    ></script>
 	<link rel="stylesheet" type="text/css" href="Styles/C0.Common.css" />
 	<link rel="shortcut icon" href="Images\favicon.ico">
 	<title>Chichitza</title>
@@ -200,6 +201,10 @@
                                         <br/>
                                         <div class="common" align="center">                
                                             <a id="loadField" href="javascript:showLoadDialog();"><img src="Images/C2.Macrochitze/load.png" width="70" height="70" border="0" Hspace="0" Vspace="0"/></a>
+                                        </div>
+                                        <br/><br/>
+                                        <div class="common" align="center">                
+                                            <a id="teasersList" href="javascript:displayListOfTeasers();"><img src="Images/C2.Macrochitze/list.png" width="70" height="70" border="0" Hspace="0" Vspace="0"/></a>
                                         </div>
                                     </td>
                                 </tr>
