--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <!-- Tinybox for displaying popups -->
     <script type="text/javascript" src="Javascript/C0.Common/tinybox.js"></script>
     <link rel="stylesheet" type="text/css" href="Styles/tinybox.css" />
+    
+    <script type="text/javascript" src="Javascript/C2.Macrochitze/J0.MazeRules.js"></script>
 	
 	<!-- Custom support libraries --> 
 	<script type="text/javascript" src="Javascript/C0.Common/retranslate.js"></script>
