--- a/Dictionary.html
+++ b/Dictionary.html
@@ -19,7 +19,7 @@
 	<script type="text/javascript" src="Javascript/C5.Dictionary/J2.DatabaseDE.js"      ></script>
 	<script type="text/javascript" src="Javascript/C5.Dictionary/J3.Functions.js"       ></script>
 	<link rel="stylesheet" type="text/css" href="Styles/C0.Common.css" />
-	<link rel="shortcut icon" href="Images\favicon.ico">
+	<link rel="shortcut icon" href="Images\C0.Common\favicon.ico">
 	<title>Chichitza</title>
 
 <style>
