--- a/Macrochitze.html
+++ b/Macrochitze.html
@@ -24,7 +24,7 @@
     <script type="text/javascript" src="Javascript/C2.Macrochitze/J4.SaveAndLoad.js"    ></script>
     <script type="text/javascript" src="Javascript/C2.Macrochitze/J5.ListTeasers.js"    ></script>
 	<link rel="stylesheet" type="text/css" href="Styles/C0.Common.css" />
-	<link rel="shortcut icon" href="Images\favicon.ico">
+	<link rel="shortcut icon" href="Images\C0.Common\favicon.ico">
 	<title>Chichitza</title>
 	
 </head>
