--- a/Chess.html
+++ b/Chess.html
@@ -20,7 +20,7 @@
 	<script type="text/javascript" src="Javascript/C0.Common/retranslateDE.js"></script>
 	<script type="text/javascript" src="Javascript/C0.Common/helpertools.js"></script>
 	<link rel="stylesheet" type="text/css" href="Styles/C0.Common.css" />
-	<link rel="shortcut icon" href="Images\favicon.ico">
+	<link rel="shortcut icon" href="Images\C0.Common\favicon.ico">
 	<title>Chichitza</title>
 
 </head>
