--- a/Helpertools/contactDE.html
+++ b/Helpertools/contactDE.html
@@ -2,7 +2,7 @@
 <head>
 	<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 	<meta content="utf-8" http-equiv="encoding">
-	<link rel="shortcut icon" href="Images\favicon.ico">
+	<link rel="shortcut icon" href="Images\C0.Common\favicon.ico">
 	<title>Chichitza</title>
 
 </head>
