--- a/Interactive.html
+++ b/Interactive.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" type="text/css" href="Styles/tinybox.css" />
     
 	<link rel="stylesheet" type="text/css" href="Styles/C0.Common.css" />
-	<link rel="shortcut icon" href="Images\favicon.ico">
+	<link rel="shortcut icon" href="Images\C0.Common\favicon.ico">
 	<title>Chichitza</title>
 	
 </head>
