--- a/Microchitze.html
+++ b/Microchitze.html
@@ -21,7 +21,7 @@
 	<script type="text/javascript" src="Javascript/C1.Microchitze/J4.Validations.js"     ></script>
 	<script type="text/javascript" src="Javascript/C1.Microchitze/J5.Auxiliaries.js"     ></script>
 	<link rel="stylesheet" type="text/css" href="Styles/C0.Common.css" />
-	<link rel="shortcut icon" href="Images\favicon.ico">
+	<link rel="shortcut icon" href="Images\C0.Common\favicon.ico">
 	<title>Chichitza</title>
 
 <style>
