Updates to chess references

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
 													<div id="position-moves"     class="common" align="center" style="visibility:hidden" ></div>
 													<div id="stipulation"        class="common" align="center" style="visibility:visible"></div>
 													<div id="credentials" 		 class="common" align="center" style="visibility:visible"></div>
+                                                    <div id="legend" 		     class="common" align="center" style="visibility:visible"></div>
 												</td>
 											</tr>
 										</table>
