https error workaround
Added <meta>  to show the chess board and avoid error:
Mixed Content: The page at 'https://chichitza.ro/' was loaded over HTTPS, but requested an insecure script 'http://chesstempo.com/js/pgnyui.js'. This request has been blocked; the content must be served over HTTPS.

--- a/Chess.html
+++ b/Chess.html
@@ -2,6 +2,8 @@
 <head>
 	<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 	<meta content="utf-8" http-equiv="encoding">
+    
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 	
 	<!-- Support libraries from Yahoo YUI project (for the chess section) -->
 	<script type="text/javascript" src="http://chesstempo.com/js/pgnyui.js"   ></script>   
