--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <head>
 	<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 	<meta content="utf-8" http-equiv="encoding">
+    
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 	
 	<!-- Support libraries from Yahoo YUI project (for the chess section) -->
 	<script type="text/javascript" src="http://chesstempo.com/js/pgnyui.js"   ></script>   
